# osm2rdf

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yaml  ci.yml
src/: lib.rs  main.rs  parser.rs  str_builder.rs  utils.rs
tests/: parser.rs
tests/fixtures/: README.md  copy.py
tests/snapshots/: parser__decode_osm_pbf_files@examples_t_amenity_list_area-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_amenity_list_node-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_area_test_data-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_area_test_data.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_change_tags_result-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_convert_data-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_convert_data.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_debug_changesets-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_dump_internal_data-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_filter_discussions_changesets-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_location_cache_data.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_location_cache_way-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_pub_names_pub-node-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_pub_names_pub-way-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_read_data-gen.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_read_data.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_read_with_progress_data.osm.pbf.snap  parser__decode_osm_pbf_files@examples_t_road_length_road-gen.osm.pbf.snap  parser__decode_osm_pbf_files@libosmium__examples_t_amenity_list_area.osm.pbf.snap  parser__decode_osm_pbf_files@libosmium__examples_t_amenity_list_node.osm.pbf.snap  parser__decode_osm_pbf_files@libosmium__examples_t_area_test_data.osm.pbf.snap  parser__decode_osm_pbf_files@libosmium__examples_t_change_tags_data-gen.osm.pbf.snap  parser__decode_osm_pbf_files@libosmium__examples_t_change_tags_data.osm.pbf.snap  (+48 more)
(+33 files in other folders)
