[package]
name = "osm2rdf"
version = "0.3.0"
description = "A tool to convert OpenStreetMap database dump into RDF TTL files for injesting into an RDF database"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/osm2rdf"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["osm", "rdf", "openstreetmap", "ttl"]
categories = ["database", "science::geo "]
rust-version = "1.71.0"

[lib]
name = "osm2rdf"

[[bin]]
name = "osm2rdf"
path = "src/bin/main.rs"


[dependencies]
anyhow = "1"
byteorder = "1"
bytesize = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
flate2 = "1"
geo = "0.26"
json = "0.12"
lazy_static = "1"
log = "0.4"
memmap2 = "0.7"
osmnodecache = "0.8"
osmpbf = "0.3"
path-absolutize = "3"
percent-encoding = "2"
rayon = "1"
regex = "1"

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }
insta = { version = "1", features = ["yaml", "redactions", "glob", "json"] }
osmpbf = "0.3"
rand = "0.8"
rayon = "1"
temp-dir = "0.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
